src/components/Intro/Intro.module.scss
@use '../../styles/globals';

.intro {
  width: 100%;
  position: relative;
  margin: 0 auto;

  .intro-img {
    margin: 0 auto;
    position: relative;
    width: calc(100% + 68px);
    margin-left: -34px;
    margin-right: -34px;

    @media (width < 768px) {
      width: calc(100% + 40px);
      margin-left: -20px;
      margin-right: -20px;
    }
  }

  .intro-text {
    display: flex;
    justify-content: space-between;
    width: 100%;

    @media (width < 1440px) {
      background-color: transparent;
      position: absolute;
      bottom: 40px;
      z-index: 2;
    }

    @media (width < 768px) {
      flex-direction: column-reverse;
      gap: 276px;
      background-color: transparent;
      position: absolute;
      bottom: 32px;
      z-index: 2;
    }

    .intro-text-leftbox {
      width: 100%;
      padding-top: 20px;
      display: flex;
      flex-direction: column;
      gap: 32px;
      padding-right: 330px;

      @media (width < 1440px) {
        padding-top: 0;
        padding-right: 0;
      }

      @media (width < 768px) {
        gap: 24px;
      }

      .intro-text-leftbox-text {
        padding-right: 66px;
        color: globals.$white-txt;

        @include globals.text-text-m;

        @media (width < 1440px) {
          padding-right: 0;
        }

        @media (width < 768px) {
          @include globals.mobile-m;
        }
      }
    }

    .intro-text-rightbox {
      padding-right: 35px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: end;
      width: 100%;

      @media (width < 1440px) {
        justify-content: start;
        padding-left: 85px;
        padding-right: 0;
      }

      @media (width < 768px) {
        padding-left: 0;
      }

      .intro-text-rightbox-h1 {
        margin: 0;
        padding-bottom: 28px;
        padding-top: 20px;
        color: globals.$white-txt;

        @include globals.desktop-h1;

        @media (width < 1440px) {
          padding-top: 0;
          padding-bottom: 3px;
          font-size: 64px;
          font-style: normal;
          font-weight: 400;
          line-height: 100%;
        }

        @media (width < 768px) {
          padding-bottom: 0;
        }
      }

      .intro-text-rightbox-text {
        color: globals.$white-txt;

        @include globals.text-text-m;

        @media (width < 768px) {
          @include globals.mobile-m;
        }
      }
    }
  }
}

